apps/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: djangogirls
  labels:
    app: djangogirls
spec:
  selector:
    matchLabels:
      app: djangogirls
  template:
    metadata:
      labels:
        app: djangogirls
    spec:
      containers:
      - name: djangogirls
        image: registry.eqlan.ru/fill/djangogirls:capi-0cfdb569-1761063832 # {"$imagepolicy": "flux-system:djangogirls"}
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 200m
            memory: 180Mi
          limits:
            cpu: 300m
            memory: 300Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
