apps/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: djangogirls
  labels:
    app: djangogirls
spec:
  type: ClusterIP
  selector:
    app: djangogirls
  ports:
    - port: 8000
      targetPort: 8000
