apps/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: djangogirls
spec:
  rules:
    - host: app.eqlan.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: djangogirls
                port:
                  number: 8000
